--- a/BingoStyle.css
+++ b/BingoStyle.css
@@ -1,7 +1,33 @@
+.body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .header {
-    color: blue;
+    text-align: center;
+    font-size: xx-large;
+    
 }
 
 .bingoFrame {
     color: brown;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
+
+.bingoBox {
+    display: block;
+    aspect-ratio: 1 / 1;
+    border-radius: 5%;
+    background-color: rgb(236, 236, 223);
+    width: 18%;
+    margin: 1%;
+    padding: 1%;
+    justify-content: center;
+}
+
+.bingoText{
+    color: black;
+}
+
+.bingoText
