--- a/BingoStyle.css
+++ b/BingoStyle.css
@@ -1,5 +1,7 @@
-.body {
-    font-family: Arial, Helvetica, sans-serif;
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+body{
+   font-family: 'Open Sans',sans-serif;
 }
 
 .header {
@@ -28,6 +30,14 @@
 
 .bingoText{
     color: black;
+    text-align: center;
 }
 
-.bingoText
+.bingoText h1 {
+    text-transform: uppercase;
+    font-size: large;
+}
+
+.bingoText p {
+    font-size: medium;
+}
