--- a/BingoStyle.css
+++ b/BingoStyle.css
@@ -4,6 +4,19 @@
     --box-color: lightblue;
     --box-border: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+/* @media print
+{    
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+
+    .container-fluid {
+        justify-content: center;
+    }
+} */
+
 body{
    font-family: 'Open Sans',sans-serif;
 }
